--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -38,20 +38,22 @@ $dimension--xl: 1920px;
 $dimension--xxl: 2240px;
 
 // -  <<----------<< Shadows Colors >>---------->>
-$box-shadow--level-1: 0 1px 3px rgba(0, 0, 0, 0.12),
+
+// #  Card
+$box-shadow--card---level-1: 0 1px 3px rgba(0, 0, 0, 0.12),
   0 1px 2px rgba(0, 0, 0, 0.24);
-$box-shadow--level-2: 0 3px 6px rgba(0, 0, 0, 0.16),
+$box-shadow--card---level-2: 0 3px 6px rgba(0, 0, 0, 0.16),
   0 3px 6px rgba(0, 0, 0, 0.23);
-$box-shadow--level-3: 0 10px 20px rgba(0, 0, 0, 0.19),
+$box-shadow--card---level-3: 0 10px 20px rgba(0, 0, 0, 0.19),
   0 6px 6px rgba(0, 0, 0, 0.23);
-$box-shadow--level-4: 0 14px 28px rgba(0, 0, 0, 0.25),
+$box-shadow--card---level-4: 0 14px 28px rgba(0, 0, 0, 0.25),
   0 10px 10px rgba(0, 0, 0, 0.22);
-$box-shadow--level-5: 0 19px 38px rgba(0, 0, 0, 0.3),
+$box-shadow--card---level-5: 0 19px 38px rgba(0, 0, 0, 0.3),
   0 15px 12px rgba(0, 0, 0, 0.22);
 
-$box-shadow--slide-in: 0 1px 3px 10px rgba(0, 0, 0, 0.12),
+$box-shadow--caption---slide-in: 0 1px 3px 10px rgba(0, 0, 0, 0.12),
   0 1px 2px 5px rgba(0, 0, 0, 0.24);
-$box-shadow--slide-out: 0 19px 38px 20px rgba(0, 0, 0, 0.3),
+$box-shadow--caption---slide-out: 0 19px 38px 20px rgba(0, 0, 0, 0.3),
   0 15px 12px 20px rgba(0, 0, 0, 0.22);
 
 // -  <<----------<< Borders Sizes>>---------->>
@@ -186,11 +188,14 @@ $radial-gradient--foreground: radial-gradient(#003, #000);
 
 // -  <<----------<< Background-Color--Transparant >>---------->>
 
-$background-color--transparant-white: hsla(0, 0%, 100%, 0.3);
-$background-color--transparant-black: hsla(0, 0%, 0%, 0.3);
+$bg-color--transparant-white: hsla(0, 0%, 100%, 0.3);
+$bg-color--transparant-black: hsla(0, 0%, 0%, 0.3);
 
-$background-color--transparant-black--light: hsla(0, 0%, 0%, 0.4);
-$background-color--transparant-black--dark: hsla(0, 0%, 0%, 0.8);
+$bg-color--transparant-black---light: hsla(0, 0%, 0%, 0.4);
+$bg-color--transparant-black---dark: hsla(0, 0%, 0%, 0.8);
+
+$bg-color--transparant-white---light: hsla(0, 0%, 100%, 0.4);
+$bg-color--transparant-white---dark: hsla(0, 0%, 100%, 0.8);
 
 // -  <<----------<< Filter >>---------->>
 $filter--light: brightness(0.8) contrast(1.2);
