--- a/assets/styles/scss/components/_button.scss
+++ b/assets/styles/scss/components/_button.scss
@@ -12,7 +12,7 @@ button {
   border: 0;
   background-color: var(--tertiary-color);
   border-radius: $border-radius--xs;
-  box-shadow: $box-shadow--slide-in;
+  box-shadow: $box-shadow--caption---slide-in;
   color: var(--primary-color);
   font-size: $font-size--2;
   font-variant: small-caps;
