--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -48,18 +48,16 @@
 
 .hero {
   position: relative;
-  height: 100vh;
   background-attachment: fixed;
   background-image: url('/assets/media/images/marcel-teugels/favorites/kantrechten--05-upscaled.jpg');
   background-position: center center;
   background-size: cover;
 
   &__container {
-    height: 100%;
     justify-content: center;
     animation: linear-gradient 15s ease infinite;
     // background: $linear-gradient--combo;
-    background-color: $background-color--transparant-white;
+    background-color: $bg-color--transparant-white;
     // background-size: 400% 400%;
   }
 
@@ -144,8 +142,8 @@
     bottom: 0;
     left: 0;
     padding: $whitespace--s;
-    background-color: $background-color--transparant-black--light;
-    box-shadow: $box-shadow--slide-in;
+    background-color: $bg-color--transparant-black---light;
+    box-shadow: $box-shadow--caption---slide-in;
   }
 
   &__caption-title {
@@ -189,8 +187,8 @@
 
       &__caption {
         bottom: 0;
-        background-color: $background-color--transparant-black--dark;
-        box-shadow: $box-shadow--slide-out;
+        background-color: $bg-color--transparant-black---dark;
+        box-shadow: $box-shadow--caption---slide-out;
       }
 
       &__title {
@@ -216,10 +214,12 @@
   background-image: url('/assets/media/images/marcel-teugels/favorites/sculpture--07.jpg');
   background-position: center center;
   background-size: cover;
-  filter: $filter--light;
+  // filter: $filter--light;
 
   &__container {
-    background-color: $background-color--transparant-white;
+    height: 100vh;
+    background-color: $bg-color--transparant-black;
+    // background-color: $bg-color--transparant-white;
   }
 }
 
