--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1346,7 +1346,9 @@ button i {
           justify-content: center;
   -webkit-animation: linear-gradient 15s ease infinite;
           animation: linear-gradient 15s ease infinite;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(128, 128, 128, 0.85);
+  background-image: linear-gradient(-45deg, rgba(2, 45, 80, 0.5), rgba(70, 116, 180, 0.5), rgba(185, 137, 70, 0.5));
+  background-size: 400% 400%;
 }
 
 .hero__visual {
@@ -1417,7 +1419,6 @@ button i {
   bottom: 0;
   left: 0;
   padding: 1rem;
-  background-color: rgba(0, 0, 0, 0.4);
   -webkit-box-shadow: 0 1px 3px 10px rgba(0, 0, 0, 0.12), 0 1px 2px 5px rgba(0, 0, 0, 0.24);
           box-shadow: 0 1px 3px 10px rgba(0, 0, 0, 0.12), 0 1px 2px 5px rgba(0, 0, 0, 0.24);
 }
@@ -1432,10 +1433,10 @@ button i {
 }
 
 .hot-item__caption-text {
-  margin: 1rem 0;
-  color: var(--background-color);
   overflow: auto;
   height: 100px;
+  margin: 1rem 0;
+  color: var(--background-color);
 }
 
 .hot-item__caption-text::-webkit-scrollbar-thumb {
@@ -1467,7 +1468,7 @@ button i {
 
 .hot-item__container:hover .hot-item__caption {
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.85);
   -webkit-box-shadow: 0 19px 38px 20px rgba(0, 0, 0, 0.3), 0 15px 12px 20px rgba(0, 0, 0, 0.22);
           box-shadow: 0 19px 38px 20px rgba(0, 0, 0, 0.3), 0 15px 12px 20px rgba(0, 0, 0, 0.22);
 }
@@ -1495,7 +1496,7 @@ button i {
 
 .intermezzo__container {
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.85);
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -1575,6 +1576,13 @@ button i {
   --primary-color: hsla(207, 95%, 16%, 1);
   --secondary-color: hsla(215, 44%, 49%, 1);
   --tertiary-color: hsla(35, 45%, 50%, 1);
+  --bg-color--transparant---lightest: hsla(0, 0%, 100%, 0.05);
+  --bg-color--transparant---lighter: hsla(0, 0%, 100%, 0.2);
+  --bg-color--transparant---light: hsla(0, 0%, 100%, 0.35);
+  --bg-color--transparant---medium: hsla(0, 0%, 100%, 0.5);
+  --bg-color--transparant---dark: hsla(0, 0%, 100%, 0.65);
+  --bg-color--transparant---darker: hsla(0, 0%, 100%, 0.8);
+  --bg-color--transparant---darkest: hsla(0, 0%, 100%, 0.95);
 }
 
 /* -------------------------------------------------------------------------- *\
