--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -8,7 +8,7 @@
 
 // #  <h1>
 h1 {
-  padding: $whitespace--m 0;
+  padding: $filler--m 0;
   color: var(--primary-color);
   font-family: $font-family--subject;
   font-size: $font-size--6;
@@ -22,7 +22,7 @@ h1 {
 
 // #  <h2>
 h2 {
-  padding: $whitespace--s 0;
+  padding: $filler--s 0;
   color: var(--primary-color);
   font-family: $font-family--section-title;
   font-size: $font-size--5;
@@ -43,7 +43,7 @@ h2 {
 // #  <h3>
 h3 {
   display: block;
-  padding: $whitespace--xs 0;
+  padding: $filler--xs 0;
   color: var(--secondary-color);
   font-family: $font-family--article-title;
   font-size: $font-size--4;
@@ -63,7 +63,7 @@ h3 {
 
 // #  <h4>
 h4 {
-  padding: $whitespace--xxs 0;
+  padding: $filler--xxs 0;
   color: var(--tertiary-color);
   font-family: $font-family--text;
   font-size: $font-size--3;
@@ -84,7 +84,7 @@ h4 {
 // #  <h5>
 
 h5 {
-  padding: $whitespace--xxs 0;
+  padding: $filler--xxs 0;
   color: var(--tertiary-color);
   font-family: $font-family--text;
   font-size: $font-size--2;
@@ -105,7 +105,7 @@ h5 {
 // #  <h6>
 
 h6 {
-  padding: $whitespace--xxs 0;
+  padding: $filler--xxs 0;
   color: var(--foreground-color);
   font-family: $font-family--text;
   font-size: $font-size--1;
@@ -132,7 +132,7 @@ p,
 li,
 blockquote,
 figcaption {
-  padding: $whitespace--xxs 0;
+  padding: $filler--xxs 0;
   color: var(--foreground-color);
   font-family: $font-family--text;
   font-size: $font-size--1;
@@ -171,7 +171,7 @@ li {
 // #  <a>
 
 a {
-  padding: $whitespace--xxs 0;
+  padding: $filler--xxs 0;
   color: var(--primary-color);
   font-family: monospace;
   font-size: $font-size--2;
