--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -55,18 +55,19 @@
 
   &__container {
     justify-content: center;
-    animation: linear-gradient 15s ease infinite;
-    background-color: $bg-color--transparant-gray---level-5;
-    background-image: $linear-gradient--combo;
-    background-size: 400% 400%;
+    // animation: linear-gradient 15s ease infinite;
+    // background-color: $bg-color--transparant-gray---level-2;
+    // background-image: $linear-gradient--combo;
+    // background-size: 400% 400%;
+    // filter: contrast(50%);
   }
 
   &__visual {
     max-width: fit-content;
     max-height: 40vh;
-    margin: $whitespace--m 0;
+    margin: $filler--m 0;
     fill: var(--primary-color);
-    filter: drop-shadow(0 0 0.1rem var(--background-color));
+    // filter: drop-shadow(0 0 0.1rem var(--background-color));
   }
 
   &__subject {
@@ -76,7 +77,7 @@
 
   &__title {
     color: var(--forground-color);
-    filter: drop-shadow(0 0 0.1rem var(--background-color));
+    // filter: drop-shadow(0 0 0.1rem var(--background-color));
     font-family: monospace;
     font-size: $font-size--4;
     font-weight: 600;
@@ -118,7 +119,7 @@
     top: 0;
     right: 0;
     left: 0;
-    padding: $whitespace--s;
+    padding: $filler--s;
     // background-color: thistle;
     font-variant: small-caps;
     font-weight: $font-weight--subject;
@@ -141,13 +142,13 @@
     bottom: -30%;
     bottom: 0;
     left: 0;
-    padding: $whitespace--s;
+    padding: $filler--s;
     box-shadow: $box-shadow--caption---slide-in;
   }
 
   &__caption-title {
     padding: 0;
-    margin-bottom: $whitespace--s;
+    margin-bottom: $filler--s;
     color: var(--background-color);
     font-variant: small-caps;
     font-weight: $font-weight--subject;
@@ -157,7 +158,7 @@
   &__caption-text {
     overflow: auto;
     height: 100px;
-    margin: $whitespace--s 0;
+    margin: $filler--s 0;
     // background-color: magenta;
     color: var(--background-color);
   }
@@ -214,10 +215,12 @@
   background-position: center center;
   background-size: cover;
   // filter: $filter--light;
+  filter: brightness(0.2);
 
   &__container {
     height: 100vh;
-    background-color: $bg-color--transparant-black---level-5;
+    background-color: $bg-color--transparant-gray---level-2;
+    filter: brightness(0.2);
   }
 }
 
