--- a/assets/styles/scss/components/_button.scss
+++ b/assets/styles/scss/components/_button.scss
@@ -5,23 +5,30 @@
 // -  <<----------<< General >>---------->>
 
 button {
-  @include transition-general;
-  @include dimensions(none, fit-content, auto);
+  // @include transition-general;
+  // @include dimensions(none, fit-content, auto);
   // @include box-shadow(2);
 
-  padding: $filler--xs;
-  border: 0;
-  background-color: var(--tertiary-color);
-  border-radius: $border-radius--xs;
-  color: var(--primary-color);
-  font-size: $font-size--2;
-  font-variant: small-caps;
-  text-transform: lowercase;
+  // padding: $filler--xs;
+  // border: 0;
+  // background-color: var(--tertiary-color);
+  // border-radius: $border-radius--xs;
+  // color: var(--primary-color);
+  // font-size: $font-size--2;
+  // font-variant: small-caps;
+  // text-transform: lowercase;
 
-  &:active {
-    // box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    transform: translateY(4px);
-  }
+  // &:hover {
+  //   @include box-shadow(5);
+  //   transform: translateY(2px);
+  // }
+
+  //   &:active {
+  //   @include box-shadow(3);
+  //   transform: translateY(4px);
+  // }
+
+  margin: $filler--l;
 
   i {
     margin: 0;
@@ -44,4 +51,123 @@ button {
   .fa-heart {
     color: red;
   }
+}
+
+.test-btn--1 {
+  @include transition-general;
+  @include dimensions(none, fit-content, auto);
+  @include box-shadow(2);
+
+  padding: $filler--xs;
+  border: 0;
+  background-color: var(--tertiary-color);
+  border-radius: $border-radius--xs;
+  color: var(--primary-color);
+  font-size: $font-size--2;
+  font-variant: small-caps;
+  text-transform: lowercase;
+
+  &:hover {
+    @include box-shadow(4);
+
+    transform: translateY(2px);
+  }
+
+  &:active {
+    @include box-shadow(2);
+
+    transform: translateY(4px);
+  }
+}
+
+.test-btn--2 {
+}
+
+.test-btn--3 {
+}
+
+// ----------------------------------------------------------------------------
+
+$height: 65;
+$depth: 6;
+$color: #7fbb98;
+$text-color: darken($color, 10%);
+$lighten-on-hover: 7%;
+$button-speed: 0.06;
+$timing-function: ease-out;
+
+.button {
+  position: relative;
+  top: 0;
+  display: inline-block;
+  width: auto;
+  height: $height + px;
+  box-sizing: border-box;
+  padding: 0 (($height/2) + px);
+  border-top: 1px solid lighten($color, 22%);
+  border-bottom: 1px solid lighten($color, 20%);
+  margin-bottom: 15px;
+  margin-left: 5px;
+  background: linear-gradient(
+    to bottom,
+    saturate(lighten($color, 15%), 35%) 0%,
+    saturate(lighten($color, 12%), 15%) 26%,
+    $color 100%
+  );
+  border-radius: 5px;
+  color: $text-color;
+  cursor: pointer;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 2em;
+  font-weight: bold;
+  line-height: $height + px;
+  text-decoration: none;
+  text-shadow: 0 -2px 0 darken($color, 20%), 0 1px 1px lighten($color, 20%);
+  transition: all ($button-speed + s) $timing-function;
+
+  &:visited {
+    color: $text-color;
+  }
+}
+
+.button:hover {
+  background: linear-gradient(
+    to bottom,
+    lighten(saturate(lighten($color, 15%), 35%), $lighten-on-hover) 0%,
+    lighten(saturate(lighten($color, 12%), 15%), $lighten-on-hover) 26%,
+    lighten($color, $lighten-on-hover) 100%
+  );
+}
+
+.button:active {
+  top: $depth + px;
+  color: lighten($color, 45%);
+  text-shadow: 0 -2px 0 darken($color, 0%), 0 1px 1px lighten($color, 20%),
+    0 0 4px white;
+
+  &::before {
+    top: 0;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.7), 0 3px 9px rgba(0, 0, 0, 0.2);
+  }
+}
+
+.button::before {
+  position: absolute;
+  z-index: -1;
+  top: ($depth) + px;
+  right: 0;
+  left: 0;
+  display: inline-block;
+  height: ($height) + px;
+  background: linear-gradient(
+    to top,
+    saturate(darken($color, 40%), 15%) 0%,
+    saturate(darken($color, 25%), 10%) $depth + px
+  );
+  border-radius: 5px;
+  box-shadow: 0 1px 0 2px rgba(0, 0, 0, 0.3),
+    0 5px ($depth * 0.4 + px) rgba(0, 0, 0, 0.5),
+    0 ($depth * 1.8 + px) 9px rgba(0, 0, 0, 0.2);
+  content: '';
+  transition: all (($button-speed * 1.3) + s) $timing-function;
 }
