--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -2,290 +2,6 @@
 *  _home-webshop.scss: This partial file contains the styles of the 'home-webshop' page.
 \* -------------------------------------------------------------------------- */
 
-/* -------------------------------------------------------------------------- *\
--  HEADER: main-header
-\* -------------------------------------------------------------------------- */
-
-.main-header {
-  &__container {
-    background-color: gainsboro;
-  }
-}
-
-/* -------------------------------------------------------------------------- *\
--  NAV: main-nav
-\* -------------------------------------------------------------------------- */
-
-.main-nav {
-  &__container {
-    background-color: lightpink;
-  }
-
-  &__nav-logo {
-    background-color: hotpink;
-  }
-
-  &__mobile-menu {
-    background-color: deeppink;
-  }
-
-  &__mobile-menu-slice {
-    background-color: palevioletred;
-  }
-
-  &__list {
-    background-color: mediumvioletred;
-  }
-
-  &__item {
-    background-color: lavender;
-  }
-}
-
-/* -------------------------------------------------------------------------- *\
--  SECTION 1: hero
-\* -------------------------------------------------------------------------- */
-
-.hero {
-  position: relative;
-  background-attachment: fixed;
-  background-image: url('/assets/media/images/marcel-teugels/favorites/kantrechten--05-upscaled.jpg');
-  background-position: center center;
-  background-size: cover;
-
-  &__container {
-    justify-content: center;
-    // animation: linear-gradient 15s ease infinite;
-    // background-color: $bg-color--transparant-gray---level-2;
-    // background-image: $linear-gradient--combo;
-    // background-size: 400% 400%;
-    // filter: contrast(50%);
-  }
-
-  &__visual {
-    max-width: fit-content;
-    max-height: 40vh;
-    margin: $filler--m 0;
-    fill: var(--primary-color);
-    // filter: drop-shadow(0 0 0.1rem var(--background-color));
-  }
-
-  &__subject {
-    color: var(--primary-color);
-    filter: drop-shadow(0 0 0.1rem var(--background-color));
-  }
-
-  &__title {
-    color: var(--forground-color);
-    // filter: drop-shadow(0 0 0.1rem var(--background-color));
-    font-family: monospace;
-    font-size: $font-size--4;
-    font-weight: 600;
-  }
-}
-
-/* -------------------------------------------------------------------------- *\
--  SECTION 2: Hot Items
-\* -------------------------------------------------------------------------- */
-
-.hot-items {
-  &__container {
-    // @include dimensions;
-    // @include block-flex-container;
-  }
-
-  &__title {
-    // ...
-  }
-}
-
-.hot-item {
-  // ...
-  &__container {
-    position: relative;
-    // display: flex;
-    max-width: 375px;
-    height: 667px;
-    // align-items: center;
-    // justify-content: center;
-    background-color: lavender;
-  }
-
-  &__title {
-    @include transition-general;
-
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    right: 0;
-    left: 0;
-    padding: $filler--s;
-    // background-color: thistle;
-    font-variant: small-caps;
-    font-weight: $font-weight--subject;
-  }
-
-  &__visual {
-    @include transition-general;
-
-    height: 100%;
-    // background-color: blueviolet;
-  }
-
-  &__caption {
-    @include transition-general;
-    @include dimensions;
-
-    position: absolute;
-    z-index: 1;
-    right: 0;
-    bottom: -30%;
-    bottom: 0;
-    left: 0;
-    padding: $filler--s;
-    box-shadow: $box-shadow--caption---slide-in;
-  }
-
-  &__caption-title {
-    padding: 0;
-    margin-bottom: $filler--s;
-    color: var(--background-color);
-    font-variant: small-caps;
-    font-weight: $font-weight--subject;
-    text-transform: lowercase;
-  }
-
-  &__caption-text {
-    overflow: auto;
-    height: 100px;
-    margin: $filler--s 0;
-    // background-color: magenta;
-    color: var(--background-color);
-  }
-
-  &__caption-text::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
-    outline: 1px solid slategrey;
-  }
-
-  &__caption-btns {
-    @include inline-flex-container(nowrap, row, space-around, center);
-  }
-
-  &__caption-btn {
-    // ...
-  }
-
-  &__container:hover {
-    // ...
-    .hot-item {
-      // ...
-      &__visual {
-        // background-color: orchid;
-        transform: scale(1.25);
-      }
-
-      &__caption {
-        bottom: 0;
-        background-color: $bg-color--transparant-black---level-5;
-        box-shadow: $box-shadow--caption---slide-out;
-      }
-
-      &__title {
-        top: -30%;
-      }
-
-      &__caption-title {
-        @include transition-general;
-
-        color: var(--secondary-color);
-      }
-    }
-  }
-}
-
-/* -------------------------------------------------------------------------- *\
--  Intermezzo
-\* -------------------------------------------------------------------------- */
-
-.intermezzo {
-  height: 100vh;
-  background-attachment: fixed;
-  background-image: url('/assets/media/images/marcel-teugels/favorites/sculpture--07.jpg');
-  background-position: center center;
-  background-size: cover;
-  // filter: $filter--light;
-  filter: brightness(0.2);
-
-  &__container {
-    height: 100vh;
-    background-color: $bg-color--transparant-gray---level-2;
-    filter: brightness(0.2);
-  }
-}
-
-/* -------------------------------------------------------------------------- *\
--  SECTION 3: About
-\* -------------------------------------------------------------------------- */
-
-.about {
-  &__container {
-    // background-color: cornsilk;
-  }
-
-  &__title {
-    background-color: saddlebrown;
-  }
-
-  &__container--visual {
-    background-color: bisque;
-  }
-
-  &__image {
-    background-color: navajowhite;
-  }
-
-  &__container--text {
-    background-color: sienna;
-  }
-
-  &__title--text {
-    background-color: burlywood;
-  }
-
-  &__sub-title {
-    background-color: brown;
-  }
-
-  &__paragraph {
-    background-color: rosybrown;
-  }
-}
-
-.about-visual {
-  &__container {
-    background-color: sandybrown;
-  }
-
-  &__image {
-    background-color: goldenrod;
-  }
-}
-
-.about-text {
-  &__container {
-    background-color: darkgoldenrod;
-  }
-
-  &__title {
-    background-color: peru;
-  }
-
-  &__sub-title {
-    background-color: chocolate;
-  }
-
-  &__paragraph {
-    background-color: olive;
-  }
-}
+@import 'home-webshop/section-1--hero';
+@import 'home-webshop/section-2--hot-items';
+@import 'home-webshop/section-3--about';
